unpackaged/main/default/objects/Payment_Chargeback__c/Payment_Chargeback__c.object-meta.xml
<CustomObject>
    <label>Payment Chargeback</label>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Chargebacks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>