unpackaged/main/default/objects/Payment_Chargeback__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Payment Chargebacks</relationshipLabel>
    <relationshipName>Payment_Chargebacks</relationshipName>
    <type>Lookup</type>
</CustomField>