unpackaged/main/default/objects/Payment_Chargeback__c/fields/Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted__c</fullName>
    <description>This is the date on which the customer requested the chargeback</description>
    <inlineHelpText>This is the date on which the customer requested the chargeback</inlineHelpText>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>