unpackaged/main/default/objects/Payment_Chargeback__c/fields/Invoice_Balance_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Balance_Outstanding__c</fullName>
    <formula>Payment__r.Customer_Invoice__r.Balance_Outstanding__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Balance Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>