unpackaged/main/default/objects/Payment_Chargeback__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>asp04__Payment__c</referenceTo>
    <relationshipLabel>Payment Chargebacks</relationshipLabel>
    <relationshipName>Payment_Chargebacks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>