unpackaged/main/default/objects/Payment_Chargeback__c/listViews/Chargebacks_Invoice_Outstanding.listView-meta.xml
<ListView>
    <fullName>Chargebacks_Invoice_Outstanding</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Invoice__c</columns>
    <columns>Invoice_Balance_Outstanding__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Balance_Outstanding__c</field>
        <operation>greaterThan</operation>
        <value>GBP 0</value>
    </filters>
    <label>Chargebacks - Returned to Customer</label>
</ListView>