unpackaged/main/default/objects/Payment_Chargeback__c/listViews/Chargebacks_Submitted.listView-meta.xml
<ListView>
    <fullName>Chargebacks_Submitted</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Customer_Invoice__c</columns>
    <columns>Invoice_Balance_Outstanding__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Chargebacks - Submitted</label>
</ListView>